# midenup

./: .gitignore  Cargo.toml  Makefile  README.md  TUTORIAL.md  build.rs  channel-miden-new.json  channel-miden-old.json  channel-miden.json  rustfmt.toml
.config/: nextest.toml
.github/: build.yml  lint.yml  test.yml
.github/auxiliary_scripts/: cargo-wrapper.sh  generate-wrapper.sh  install-toolchains.sh
.github/workflows/: book.yml  build-docs.yml  build.yml  ci.yml  integration.yml  lint.yml  manifest.yml  new-release.yml  publish-manifest.yml  test.yml  use-cases.yml
docs/: .gitignore  Makefile  book.toml  styles.css
docs/src/: SUMMARY.md  index.md  introduction.md
docs/src/design/: _category_.yml  manifest.md  miden.md  midenup.md
docs/src/getting-started/: _category_.yml  installation.md  tutorial.md  usage.md
docs/src/theme/Admonition/Icon/: Note.tsx
manifest/: UPDATE_INSTRUCTIONS.md  channel-manifest.json  channel-manifest.toml
scripts/update-manifest/: Cargo.toml
scripts/update-manifest/src/: main.rs
src/: artifact.rs  channel.rs  config.rs  external.rs  lib.rs  main.rs  manifest.rs  miden_porcelain.rs  miden_wrapper.rs  options.rs  profile.rs  toolchain.rs  utils.rs  version.rs
src/commands/: init.rs  install.rs  list.rs  mod.rs  override.rs  override_command.rs  set.rs  show.rs  uninstall.rs  update.rs
src/migration/: atomic_installation.rs  mod.rs
tests/: install.rs  manifest-check-stable.json  manifest-non-stable.json  miden.rs  migrate.rs  uninstall.rs  update.rs
tests/common/: mod.rs
tests/data/: manifest-non-stable.json  manifest-uncompilable-midenc.json  manifest-with-git.json
tests/data/install_uninstall_test/: channel-manifest.json
tests/data/integration_initialize_component/: channel-manifest.json
tests/data/integration_install_from_non_cargo/: channel-manifest-1.json  channel-manifest-2.json
tests/data/integration_install_uninstall_test/: channel-manifest.json
tests/data/integration_interactive_test/: channel-manifest.json  miden-toolchain-with-client.toml
tests/data/integration_miden_faucet_missing_component/: channel-manifest-1.json  channel-manifest-2.json
tests/data/integration_miden_test/: channel-manifest.json
tests/data/integration_miden_toolchain_toml/: channel-manifest.json  miden-toolchain-1.toml  miden-toolchain-2.toml
tests/data/integration_midenup_unprompted_test/: channel-manifest.json
tests/data/integration_migration_test/: channel-manifest-1.json  channel-manifest-2.json
tests/data/integration_update_test/: channel-manifest-1.json  channel-manifest-2.json  channel-manifest-3.json
tests/data/midenup_unprompted_test/: channel-manifest.json
tests/data/rollback-component/: manifest-post-component-rollback.json  manifest-pre-component-rollback.json
tests/data/unit_test_manifest_additional/: manifest-non-stable.json  manifest-uncompilable-midenc.json
tests/data/update-specific/: manifest-post-component-update.json  manifest-pre-component-update.json
tests/data/update-stable/: manifest-post-update.json  manifest-pre-update.json
tools/update-manifest/: Cargo.toml
tools/update-manifest/src/: main.rs
