[package]
name = "midenup"
version = "0.2.0"
edition = "2024"

[lib]
name = "midenup"
path = "src/lib.rs"

[[bin]]
name = "midenup"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
curl = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-untagged = "0.1"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
semver = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "now",
] }
toml = { version = "1.0", features = ["preserve_order"] }
upon = { version = "0.10", default-features = false, features = [
    "serde",
    "unicode",
] }
colored = "3.0"

[build-dependencies]
cargo_toml = "0.22"

[dev-dependencies]
tempdir = "0.3"

[profile.release]
opt-level = 2
codegen-units = 1
