[package]
name = "update-manifest"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal midenup libraries
midenup = { path = "../.." }

# CLI utilities
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

# Parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cargo_toml = "0.22.3"
