[package]
name = "update-manifest"
version.workspace = true
description = "Tool for updating midenup manifests safely"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "update-manifest"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
colored.workspace = true
midenup.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
